# storage/api-docs/api-docs.json
@@ -192,6 +192,42 @@
                 }
             }
         },
+        "/user/logout": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "유저 로그아웃",
+                "description": "로그인 이후 로그아웃 요청",
+                "operationId": "3eb379bb5078906212fa45f8bd7d6ac6",
+                "responses": {
+                    "200": {
+                        "description": "응답성공"
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "User not found"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "apiAuth": []
+                    }
+                ]
+            }
+        },
         "/user/me": {
             "post": {
                 "tags": [
